<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_500"
                app:title="@string/profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/green_500"
                android:paddingTop="15dp"
                android:paddingBottom="25dp">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:src="@drawable/ic_baseline_person_24"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/profile"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="20dp"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_email_24"/>

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/not_set"
                        android:gravity="center_vertical"
                        android:layout_marginHorizontal="5dp"/>

                    <!--                    <ImageView-->
                    <!--                        android:layout_width="30dp"-->
                    <!--                        android:layout_height="30dp"-->
                    <!--                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green_500"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:id="@+id/ivGender"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_male_24"/>

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/profile"
                        android:gravity="center_vertical"
                        android:layout_marginHorizontal="5dp"/>

                    <!--                    <ImageView-->
                    <!--                        android:layout_width="30dp"-->
                    <!--                        android:layout_height="30dp"-->
                    <!--                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/green_500"/>

                <LinearLayout
                    android:id="@+id/llLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_logout_24"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/logout"
                        android:gravity="center_vertical"
                        android:layout_marginHorizontal="5dp"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>